Disable netsim on Mac M1
We do not have an arm rust backend.

Bug: 260749431
Change-Id: Ie512248c1bf13997995536acb2c81abeb691ca0c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -224,7 +224,7 @@ if(ANDROID_EXTRACT_SYMBOLS AND CROSSCOMPILE)
   set(ANDROID_EXTRACT_SYMBOLS FALSE)
 endif()
 
-if (NOT LINUX_AARCH64)
+if (NOT LINUX_AARCH64 AND NOT DARWIN_AARCH64)
   set(FEATURE_NETSIM TRUE)
 endif()
 
