downloadable snapshot: provide interface to access compatible.pb
Note: this should have no impact on existing snapshot flow.

Bug: 249176844

Change-Id: I28ddd9cbc7547d2203d2390ec8472552fd1cbdbb

--- a/android/emu/protos/CMakeLists.txt
+++ b/android/emu/protos/CMakeLists.txt
@@ -14,6 +14,7 @@ if(WINDOWS_MSVC_X86_64)
            crash_info.proto
            emulator_feature_patterns.proto
            emulator_features.proto
+           emulator_compatible.proto
            observation.proto
            offworld.proto
            point.proto
@@ -39,6 +40,7 @@ else()
            crash_info.proto
            emulator_feature_patterns.proto
            emulator_features.proto
+           emulator_compatible.proto
            observation.proto
            offworld.proto
            point.proto
