[Refactor] Add Wifi Service class and its factory class
This refactor will make it easier to enable the use case
where the network traffic is directed to external netsim
process via gRPC.

BUG: 228982170

Change-Id: Icdbb6a48b438a5b8eb6fff235493a6920e3fc2a3
Signed-off-by: Weilun Du <wdu@google.com>

--- a/android-qemu2-glue/CMakeLists.txt
+++ b/android-qemu2-glue/CMakeLists.txt
@@ -36,6 +36,7 @@ set(android-qemu2-glue_src
     emulation/virtio_vsock_transport.cpp
     emulation/virtio-wifi.cpp
     emulation/VirtioGpuTimelines.cpp
+    emulation/WifiService.cpp
     emulation/VirtioWifiForwarder.cpp
     looper-qemu.cpp
     net-android.cpp
