--- a/android/android-grpc/python/aemu-grpc/pyproject.toml
+++ b/android/android-grpc/python/aemu-grpc/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = ["Topic :: Software Development"]
 dependencies = [
     "grpcio==1.48.1",
     "protobuf==3.20.1",
+    "psutil==5.9.4",
     "tink==1.7.0; sys_platform != 'win32'",
     "importlib-metadata; python_version<'3.8'",
 ]
