RootCanal: Update CMakeLists.txt file
Test: NA
Bug: 261188171
Change-Id: I603109f9c8cbbb4dd00b6db22a9cc70e02b6f637

--- a/android/bluetooth/rootcanal/CMakeLists.txt
+++ b/android/bluetooth/rootcanal/CMakeLists.txt
@@ -156,6 +156,7 @@ android_add_library(
   lib/crypto/crypto.cc
   lib/hci/address.cc
   lib/hci/class_of_device.cc
+  lib/hci/pcap_filter.cc
   model/controller/acl_connection.cc
   model/controller/acl_connection_handler.cc
   model/controller/controller_properties.cc
