gRPC: Enable server side reflection
This enables grpc server side reflection, which will allow partners to
dynamically interact with the emulator.

See:
https://grpc.github.io/grpc/cpp/md_doc_server_reflection_tutorial.html

Note: Endpoints are still protected through jwt/tokens when enabled.

Test: grpcurl -plaintext localhost:8554 list
    android.emulation.bluetooth.EmulatedBluetoothService
    android.emulation.control.EmulatorController
    android.emulation.control.SnapshotService
    android.emulation.control.UiController
    grpc.reflection.v1alpha.ServerReflection

Bug: 262886436
Change-Id: I6c05fe74eb57ebf4d903e3528402359e32258813

--- a/android/android-grpc/CMakeLists.txt
+++ b/android/android-grpc/CMakeLists.txt
@@ -121,6 +121,7 @@ android_add_library(
       android/emulation/control/utils/SharedMemoryLibrary.cpp
       android/emulation/control/waterfall/WaterfallFactory.cpp)
 
+android_complete_archive(ANDROID_GRPC_REFLECTION grpc++_reflection)
 target_link_libraries(
   android-grpc
   PRIVATE png
@@ -131,6 +132,7 @@ target_link_libraries(
          android-emu-tracing
          android-net
          grpc++
+         ${ANDROID_GRPC_REFLECTION}
          protobuf::libprotobuf
          tink::config::tink_config
          tink::jwt::jwk_set_converter
