--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,18 @@ set(OPTION_ENABLE_SYSTEM_RUST
       "Enable usage of the system rust compiler, only needed on Mac M1 or Windows"
 )
 
+if (DARWIN_AARCH64 AND NOT Rust_COMPILER)
+   message(STATUS "On Apple sillicon attempting to use platform toolchain if available.")
+   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/android/build/cmake/corrosion/cmake/")
+   find_package(Rust REQUIRED)
+   if (TARGET Rust::Rustc)
+      set(OPTION_ENABLE_SYSTEM_RUST TRUE)
+   else()
+      message(STATUS "Unable to derive local toolchain, using cross compilation.")
+      message(STATUS "If you are a developer you can install rust with `curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh`")
+   endif()
+endif()
+
 if(Rust_COMPILER OR OPTION_ENABLE_SYSTEM_RUST)
   if(OPTION_ENABLE_SYSTEM_RUST)
     message(STATUS "Attempting to use the system rust compiler")
