RootCanal: Refactor PHY abstraction
Test: m
Change-Id: Icad144b49e85d4b578672c949a3d6d45fed2781b

--- a/android/bluetooth/rootcanal/CMakeLists.txt
+++ b/android/bluetooth/rootcanal/CMakeLists.txt
@@ -179,7 +179,8 @@ android_add_library(
   model/hci/hci_sniffer.cc
   model/hci/hci_socket_transport.cc
   model/setup/device_boutique.cc
-  model/setup/phy_layer_factory.cc
+  model/setup/phy_device.cc
+  model/setup/phy_layer.cc
   model/setup/test_channel_transport.cc
   model/setup/test_command_handler.cc
   model/setup/test_model.cc
