Refactor gRPC utility headers
This moves gRPC header utilities file to a common location.
This will make it easier for the migration to netsim.

Change-Id: Icfd3efae4503f73ee6f51609c02c6e2cb4a45c4a

--- a/android/android-grpc/CMakeLists.txt
+++ b/android/android-grpc/CMakeLists.txt
@@ -73,7 +73,7 @@ android_add_library(
 target_include_directories(
   android-grpc-services PUBLIC ${CMAKE_CURRENT_BINARY_DIR}
                                ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(android-grpc-services PUBLIC protobuf::libprotobuf grpc++
+target_link_libraries(android-grpc-services PUBLIC protobuf::libprotobuf grpc++ android-emu-grpc-utils
                                                    android-emu-protos)
 #lib which doesn't include android-emu
 android_add_library(
