--- a/android/emu/CMakeLists.txt
+++ b/android/emu/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(curl)
 add_subdirectory(feature)
 add_subdirectory(files)
 add_subdirectory(gps)
+add_subdirectory(grpc-utils)
 add_subdirectory(hardware)
 add_subdirectory(host-common)
 add_subdirectory(location)
