Fix intel mac build.
Bug: N/A
Test: on intel mac, android/rebuild.sh
Change-Id: If1638e503324c1af0a2ab0f40277f65b400daace

--- a/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -284,7 +284,8 @@ if(NOT LINUX_AARCH64)
           vulkan/VulkanStream_unittest.cpp)
     add_opengl_dependencies(OpenglRender_vulkan_unittests)
     target_link_libraries(OpenglRender_vulkan_unittests
-                          PRIVATE android-emu-test-launcher android-emu android-emu-base-headers)
+                          PRIVATE android-emu-test-launcher android-emu android-emu-base-headers
+                                  qemu-host-common-headers)
     target_link_libraries(
       OpenglRender_vulkan_unittests PUBLIC OpenglRender_standalone_common
                                            OpenglRender_vulkan gmock_main)
