Code coverage PoC.
Enabled code coverage on a small set of test sources, to verify that it
is working correctly. On ab/, we should we a coverage/lcov file in the
build output for linux build.

Bug: 264676800
Test: cat objs/lcov
Change-Id: I1e20a60cb6b888b8fb60b53f4307f4be2dddb409

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(android-net)
 add_subdirectory(android-emu-base)
 add_subdirectory(android-emu)
 add_subdirectory(android-emugl)
+add_subdirectory(coverage-poc)
 if(NOT OPTION_AEMU_LIBS_ONLY)
   add_subdirectory(emulator)
   add_subdirectory(emulator-check)
