avd config: add userdata.useQcow2
This will allow the emulator to convert userdata
from ext4 to qcow2 format.

Bug: 265045799

Change-Id: I6e34d768a85a56bd0eead1ff13ce9df2fcc899af

--- a/android/emu/avd/src/android/avd/hardware-properties.ini
+++ b/android/emu/avd/src/android/avd/hardware-properties.ini
@@ -898,6 +898,15 @@ default     = no
 abstract    = Always use cold boot
 description = If set, AVD will always use the full cold boot instead of snapshot-based quick boot process
 
+# force to use Qcow2 instead of ext4 for userdata
+#
+name        = userdata.useQcow2
+type        = boolean
+default     = no
+abstract    = use QCOW2 format for userdata-qemu.img
+description = If set, AVD will use qcow2 for userdata-qemu.img instead of the ext4
+
+
 # use Downloadable snapshot from snapshots/downloaded/avd to speed up first boot
 #
 name        = firstboot.bootFromDownloadableSnapshot
