Add support for bluetooth with packet streaming
This adds support for netsim. Netsim can be enabled by passing in the
`-packet-streamer-endpoint <uri>` flag. The emulator will revert to
using rootcanal if this flag is not prevent.

The emulator currently only supports discovery of netsim.

This deprecates the majority of the roocanal flags. Rootcanal will be
removed in one of the upcoming cls.

Note: This is not yet stable.

Test: Can discover devices from the emulator.
Bug: 255649712
Change-Id: Id568d7ed0f7f22587393aa141538aca1050e7c1f

--- a/android-qemu2-glue/CMakeLists.txt
+++ b/android-qemu2-glue/CMakeLists.txt
@@ -61,6 +61,7 @@ set(android-qemu2-glue_src
     qemu-setup-dns-servers.cpp
     qemu-setup.cpp
     qemu-rootcanal-agent-impl.cpp
+    netsim/qemu-netsim-agent-impl.cpp
     qemu-telephony-agent-impl.c
     qemu-user-event-agent-impl.c
     qemu-virtual-scene-agent-impl.cpp
@@ -87,8 +88,16 @@ if(WEBRTC)
   target_link_libraries(libqemu2-glue PRIVATE android-webrtc)
 endif()
 if(BLUETOOTH_EMULATION)
-  target_link_libraries(libqemu2-glue PRIVATE grpc-emulated-bluetooth
-                                              libbt-rootcanal-qemu)
+  target_link_libraries(
+    libqemu2-glue
+    PRIVATE grpc-emulated-bluetooth
+            frontend-grpc-lib
+            grpc++
+            packet-streamer-client-lib
+            protobuf::libprotobuf
+            libbt-rootcanal
+            packet-streamer-client-grpc-lib
+            libbt-rootcanal-qemu)
 endif()
 
 target_link_libraries(
@@ -121,8 +130,14 @@ android_add_test(TARGET libqemu2-glue_unittests
                  SRC tests/VirtioGpuTimelines_unittest.cpp)
 
 target_link_libraries(
-  libqemu2-glue_unittests PRIVATE libqemu2-glue qemu-host-common-headers android-emu-base android-emu-base-headers
-                                  gmock gtest gmock_main)
+  libqemu2-glue_unittests
+  PRIVATE libqemu2-glue
+          qemu-host-common-headers
+          android-emu-base
+          android-emu-base-headers
+          gmock
+          gtest
+          gmock_main)
 
 target_include_directories(
   libqemu2-glue_unittests
