Add missing windows dll dependency
The emulator-check binary that is used by studio to determine if we can
run the emulator on windows needed the libprotobuf.dll, which it could
not find.

We now include this dll and update the test to run against the
distribution versus the build directory.

Bug: 265317179
Change-Id: I4dcde6a914c6d4eef174d7cf145592cb49352b60

--- a/android/emulator/CMakeLists.txt
+++ b/android/emulator/CMakeLists.txt
@@ -159,3 +159,8 @@ android_target_properties(emulator all "${RUNTIME_OS_PROPERTIES}")
 install(FILES ${ANDROID_QEMU2_TOP_DIR}/android-info.txt DESTINATION .)
 install(FILES ${ANDROID_QEMU2_TOP_DIR}/LICENSES/LICENSE.APACHE2 DESTINATION .
         RENAME LICENSE)
+
+# Duplicate install for windows (emulator-check needs these)
+if(WINDOWS_MSVC_X86_64)
+  install(TARGETS android-emu-agents libprotobuf DESTINATION .)
+endif()
