--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,7 +257,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/archives)
 set(CMAKE_PDB_OUTPUT_DIRECTORY ${DBG_INFO})
 # Feeling courageous? Set this to $ANDROID_SDK_ROOT
-if(CROSSCOMPILE AND (DARWIN_AARCH64 OR DARWIN_X86_64))
+if(DARWIN_AARCH64)
   set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/distribution/emulator)
   set(CMAKE_INSTALL_CODESIGN ${CMAKE_BINARY_DIR}/distribution/_codesign)
 else()
@@ -269,7 +269,7 @@ set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 prebuilt(Threads)
 
-if(CROSSCOMPILE AND (DARWIN_AARCH64 OR DARWIN_X86_64))
+if(DARWIN_AARCH64)
   install(FILES ${ANDROID_QEMU2_TOP_DIR}/entitlements.plist
           DESTINATION ${CMAKE_INSTALL_CODESIGN} RENAME entitlements.xml)
   install(FILES ${ANDROID_QEMU2_TOP_DIR}/filelist
