downloadable snapshot: add downloaded and local avd path into config.ini
This allows config.ini to have custom paths to downloaded avd and
local avd.

Bug: 266612648

Change-Id: I9d67d8a3c6a7d9f6c9454754b72c7585068660c4

--- a/android/emu/avd/src/android/avd/hardware-properties.ini
+++ b/android/emu/avd/src/android/avd/hardware-properties.ini
@@ -914,6 +914,16 @@ abstract    = use QCOW2 format for userdata-qemu.img
 description = If set, AVD will use qcow2 for userdata-qemu.img instead of the ext4
 
 
+name        = firstboot.downloaded.path
+type        = string
+default     =
+abstract    = Path to downloaded snapshot dir
+
+name        = firstboot.local.path
+type        = string
+default     =
+abstract    = Path to local snapshot dir
+
 # use Downloadable snapshot from snapshots/downloaded/avd to speed up first boot
 #
 name        = firstboot.bootFromDownloadableSnapshot
