multiple emulators support: add requires.emualtor.version to config.ini
This is needed when AVD manager creates new avd, to set a version
that should be used when booting up the AVD.

Bug: 266887493

Change-Id: I458a16950afe7341ff413a56636f838997ab9f3a

--- a/android/emu/avd/src/android/avd/hardware-properties.ini
+++ b/android/emu/avd/src/android/avd/hardware-properties.ini
@@ -963,4 +963,10 @@ default     =
 abstract    = avd home that was used during the construction of this hardware.ini
 description = This can be used by post processing tools to migrate snapshots
 
+# emulator version for this avd
+name        = requires.emulator.version
+type        = string
+default     =
+abstract    = avd requires the version of emulator to boot properly from snapshot
+description = This is often set by avd manager in studio when creating avd
 
