--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ include(android)
 include(prebuilts)
 include(qemu2-src-gen)
 
-set(OPTION_RUST FALSE CACHE BOOL "Enable all rust dependencies, disabled for now b/266452652.")
+set(OPTION_RUST TRUE CACHE BOOL "Enable all rust dependencies.")
 set(OPTION_CRASHUPLOAD "NONE" CACHE STRING "Destination of crash reports.")
 set(OPTION_TRACE
     "nop"
