Add crash reporting tool + unit tests
This adds a set of additional tests as well as a tool that can be used
to list and manually report crashes. This tool can be used by our E2E
test infrastructure and containers to list, report and analyze crash
reports.

For example:

./crashreport -l

/tmp/android-jansene/emu-crash.db/completed/0df239a9-faf3-4b2f-8142-8faec902ba8b.dmp
/tmp/android-jansene/emu-crash.db/completed/19a9dca2-c725-42a3-89d1-fa547bd0bfd2.dmp

And:

./crashreport -d /tmp/android-jansene/emu-crash.db/completed/0df239a9-faf3-4b2f-8142-8faec902ba8b.dmp

Operating system: Mac OS X
                  13.2.0 22D49
CPU: arm64
     10 CPUs

GPU: UNKNOWN

Crash reason:  0x00000000 / 0x00000000
Crash address: 0x19669e868
Process uptime: 2 seconds

Thread 0 (crashed)
 0  libsystem_kernel.dylib + 0x9868
     x0 = 0x0000000000000000    x1 = 0x0000000000000000
     x2 = 0x0000000000000000    x3 = 0x0000000000000000
     x4 = 0x00000001024f44c0    x5 = 0x0000000000000020
     x6 = 0x736772615f74696e    x7 = 0x000000010190be27
     x8 = 0x155ab3d5880a01c5    x9 = 0x155ab3d479cc00c5
    x10 = 0x00006000036e4378   x11 = 0x00000000000007fb
    x12 = 0x00000000b2e5f071   x13 = 0x00000000000007fd
    x14 = 0x00000000b305f872   x15 = 0x00000000b2e5f071
    x16 = 0x0000000000000148   x17 = 0x00000001f6ac36d8
    x18 = 0x0000000000000000   x19 = 0x0000000000000006
    x20 = 0x00000001f1c60100   x21 = 0x0000000000000103
    x22 = 0x00000001f1c601e0   x23 = 0x0000600001bf46c0
    x24 = 0x0000600001bd43c0   x25 = 0x0000000000000030
    x26 = 0x000000016fa7e890   x27 = 0x0000000000000060
    x28 = 0x0000000105386848    fp = 0x000000016fa7de80
     lr = 0x00000001966d5cec    sp = 0x000000016fa7de60
     pc = 0x000000019669e868
    Found by: given as instruction pointer in context
 1  libsystem_pthread.dylib + 0x6ce8

Bug: 266714588
Change-Id: I0150db624c57cd0b28f202c8c0334df4424de32e

--- a/android/emu/crashreport/CMakeLists.txt
+++ b/android/emu/crashreport/CMakeLists.txt
@@ -8,11 +8,13 @@ android_add_library(
   SRC android/crashreport/CrashSytemInit.cpp
   DEPS android-emu-base
        android-emu-base-headers
+       android-emu-crashreport
        android-emu-files
        android-emu-utils
-       android-emu-crashreport
        crashpad_client
        protobuf::libprotobuf)
+target_link_libraries(android-emu-crash-initializer
+                      PUBLIC android-emu-base-headers)
 target_include_directories(android-emu-crash-initializer PRIVATE src
                            PUBLIC include)
 target_compile_options(android-emu-crash-initializer
@@ -30,14 +32,14 @@ android_add_library(
   DEPS android-emu-agents
        android-emu-avd
        android-emu-base
-       android-emu-base-headers
        android-emu-cmdline
        android-emu-files
        android-emu-utils
        android-hw-config
        protobuf::libprotobuf)
 target_include_directories(android-emu-crashreport PRIVATE src PUBLIC include)
-target_link_libraries(android-emu-crashreport PUBLIC crashpad_client)
+target_link_libraries(android-emu-crashreport PUBLIC crashpad_client
+                                                     android-emu-base-headers)
 target_compile_options(android-emu-crashreport PRIVATE -Wno-extern-c-compat
                        PUBLIC -Wno-macro-redefined)
 
@@ -75,8 +77,8 @@ android_add_library(
   SOURCE_DIR
   src
   SRC android/crashreport/CrashConsentNoUi.cpp
-  DEPS android-emu-agents android-emu-base android-emu-base-headers android-emu-cmdline
-       android-emu-utils crashpad_client)
+  DEPS android-emu-agents android-emu-base android-emu-base-headers
+       android-emu-cmdline android-emu-utils crashpad_client)
 target_compile_definitions(android-emu-crashreport-consent-no-ui
                            PRIVATE AEMU_CRASH_EXPORTS PUBLIC AEMU_CRASH_SHARED)
 target_include_directories(android-emu-crashreport-consent-no-ui PRIVATE src
@@ -97,3 +99,56 @@ target_compile_definitions(android-emu-crashreport-consent-never
                            PRIVATE AEMU_CRASH_EXPORTS PUBLIC AEMU_CRASH_SHARED)
 target_include_directories(android-emu-crashreport-consent-never PRIVATE src
                            PUBLIC include)
+
+# This one can be used for unit tests.
+android_add_library(
+  TARGET android-emu-crashreport-consent-always
+  # SHARED # Used to test if you can compile this stand alone.
+  LICENSE Apache-2.0
+  SOURCE_DIR
+  src
+  SRC android/crashreport/CrashConsentAlways.cpp
+  DEPS crashpad_client)
+target_compile_definitions(android-emu-crashreport-consent-always
+                           PRIVATE AEMU_CRASH_EXPORTS PUBLIC AEMU_CRASH_SHARED)
+target_include_directories(android-emu-crashreport-consent-always PRIVATE src
+                           PUBLIC include)
+
+android_add_executable(
+  TARGET crashreport INSTALL .
+  LICENSE Apache-2.0 SOURCE_DIR
+  src
+  SRC android/crashreport/CrashUploader.cpp
+  DEPS android-emu-base-headers android-emu-crashreport
+       android-emu-crashreport-consent-always breakpad_common
+       breakpad_processor)
+add_dependencies(crashreport crashpad_handler)
+
+android_add_executable(
+  TARGET crash-me
+  NODISTRIBUTE SOURCE_DIR test
+  SRC android/crashreport/testing/main-test-crasher.cpp
+  DEPS android-emu android-emu-crash-initializer android-emu-crashreport
+       android-emu-crashreport-consent-never)
+
+android_upload_symbols(crash-me)
+
+android_add_test(
+  TARGET android-emu-crashreport-testing
+  SRC android/crashreport//CrashDump_unittest.cpp
+      android/crashreport/detectors/CrashDetectors_unittest.cpp
+  SOURCE_DIR test
+  DEPS android-emu-agents
+       android-emu-base
+       android-emu-base-headers
+       android-emu-base-process
+       android-emu-crashreport
+       android-emu-test-launcher
+       android-emu-utils
+       breakpad_processor
+       crashpad_client)
+
+target_compile_options(android-emu-crashreport-testing
+                       PRIVATE -Wno-extern-c-compat)
+add_dependencies(android-emu-crashreport-testing crash-me crashpad_handler
+                 crashreport)
