Enable Netsim on emulator side.
When option redirect-to-netsim is used, network traffic will
be forwarded to the (external) netsim process.

BUG: 228982170

Change-Id: I0f4b757e14932440d5ecc13afdd5d13923706c16
Signed-off-by: Weilun Du <wdu@google.com>

--- a/android-qemu2-glue/CMakeLists.txt
+++ b/android-qemu2-glue/CMakeLists.txt
@@ -38,6 +38,7 @@ set(android-qemu2-glue_src
     emulation/VirtioGpuTimelines.cpp
     emulation/WifiService.cpp
     emulation/VirtioWifiForwarder.cpp
+    emulation/NetsimWifiForwarder.cpp
     looper-qemu.cpp
     net-android.cpp
     proxy/slirp_proxy.cpp
@@ -110,7 +111,11 @@ target_link_libraries(
           ssl
           hostapd
           flatbuffers
-          qemu-host-common-headers)
+          qemu-host-common-headers
+          grpc++
+          packet-streamer-client-lib
+          protobuf::libprotobuf
+          packet-streamer-client-grpc-lib)
 
 add_dependencies(libqemu2-glue virtio_gpu_timelines_fbs_header)
 
