Directly upload reports from crash report
The crashreport tool now directly uploads the requested report versus
marking them as uploadable.

This makes sure that the reports will always be available and can be
queried directly on the backend.

The code is directly lifted from the uploader provided by crashpad.

Change-Id: I19ba873499689f30861cd7e55787e578481d8be5

--- a/android/emu/crashreport/CMakeLists.txt
+++ b/android/emu/crashreport/CMakeLists.txt
@@ -121,7 +121,7 @@ android_add_executable(
   SRC android/crashreport/CrashUploader.cpp
   DEPS android-emu-base-headers android-emu-crashreport
        android-emu-crashreport-consent-always breakpad_common
-       breakpad_processor)
+       breakpad_processor crashpad_handler_handler)
 add_dependencies(crashreport crashpad_handler)
 
 android_add_executable(
