Revert "Revert "Process symbols""
This fixes a few issues that caused some problems:

- We now use a separate symbols location so we have no collision
- We properly invoke the windows uploader.

This reverts commit ce0412e88bfa7b19b16cc5cdd13e84611749fbf1.

Change-Id: I2da5042916752620408ccd942f6c9f07db5d11c4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,7 @@ else()
     file(STRINGS "$ENV{HOME}/.emulator_symbol_server_key" BREAKPAD_API_KEY)
   endif()
   set(ANDROID_EXTRACT_SYMBOLS TRUE)
-  set(ANDROID_SYMBOL_DIR ${DBG_INFO})
+  set(ANDROID_SYMBOL_DIR ${CMAKE_BINARY_DIR}/build/symbols)
   file(MAKE_DIRECTORY ${ANDROID_SYMBOL_DIR})
   message(STATUS "Uploading symbols to ${BREAKPAD_API_URL}")
 endif()
