Re-enable netsim in cross compile
The mac build was broken due to undefined behavior in the
android_link_libraries function.

This function does not always behave as expected and in certain
conditions it could provide a set of arguments that did not exist,
resulting in additional libraries being linked that were unused.

In the case of the cross-compile this could result in linking against an
API key for example (for example -l39432). This in turn would break the
build.

Since cross compilation does not produce any output you would not have
any idea what is going wrong.

With this change we:

- Add android_target_link_libraries2 that does not have this issue
- Clean up the breakpad cmakelist to only use what we need
- Move the symbols function to its own cmake file.

Bug: 271329265
Change-Id: I192b5aae3b8957be5801890da02b0e012c3902e0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,26 +198,14 @@ set(DBG_INFO ${CMAKE_BINARY_DIR}/build/debug_info)
 
 # Symbol extraction is not supported when cross compiling.
 set(ANDROID_SYMBOL_DIR ${CMAKE_BINARY_DIR}/build/symbols)
-file(MAKE_DIRECTORY ${ANDROID_SYMBOL_DIR})
-if(OPTION_CRASHUPLOAD STREQUAL "NONE")
-  set(ANDROID_EXTRACT_SYMBOLS FALSE)
-else()
+if(NOT OPTION_CRASHUPLOAD STREQUAL "NONE")
   if(WIN32)
     file(STRINGS "$ENV{USERPROFILE}/.emulator_symbol_server_key"
          BREAKPAD_API_KEY)
   else()
     file(STRINGS "$ENV{HOME}/.emulator_symbol_server_key" BREAKPAD_API_KEY)
   endif()
-  set(ANDROID_EXTRACT_SYMBOLS TRUE)
   message(STATUS "Uploading symbols to ${BREAKPAD_API_URL}")
-endif()
-
-if(ANDROID_EXTRACT_SYMBOLS AND CROSSCOMPILE)
-  message(
-    WARNING
-      "Symbol extraction not supported when cross compiling from ${ANDROID_HOST_TAG} -> ${ANDROID_TARGET_TAG}, disabling."
-  )
-  set(ANDROID_EXTRACT_SYMBOLS FALSE)
 endif()
 
 set(FEATURE_NETSIM TRUE CACHE BOOL "Include netsim the network simulator.")
